--- a/3_CV/applicantCV/A03.1_CV_Averseng.tex
+++ b/3_CV/applicantCV/A03.1_CV_Averseng.tex
@@ -60,12 +60,13 @@ Minors in quantum and statistical physics, continuum mechanics
 
 \begin{rSection}{Work experience}
 {\bf Laboratoire Jacques-Louis Lions, Inria Alpines team, Paris} \hfill {\em Jan. 2020 - June 2020} \\
-Post-doc, supervised by Xavier Claeys. Working on combinations of additive Schwarz and Calder\'{o}n preconditioners.\\
+Postdoc, supervised by Xavier Claeys. \\
+Working on combinations of additive Schwarz and Calder\'{o}n preconditioners.\\
 {\bf Laboratoire des systèmes perceptifs, ENS, Paris} \hfill {\em Jan. 2015 - July 2015} 
-\\ Research internship in behavioral neurosciences.\\ 
+\\ Research internship in behavioral neurosciences. Supervised by Pr. Shihab Shamma\\ 
 {\bf ESI-Group, San Diego}
 \hfill {\em March - July 2013} \\
-Research internship. \\Modeling of the variance in a transient model of the Statistical Energy Analysis. \\
+Research internship. Supervised by Bryce Gardner. \\Modeling of the variance in a transient model of the Statistical Energy Analysis. \\
 {\bf PSA Peugeot Citroën, Vélizy-Villacoublay} \hfill{\em July - Sept. 2013} \\
 Ergonomy of Human Machine interfaces \\
 {\bf Armée française, 8ème RPIMA, Castres}  \hfill{\em Sept. 2011 - April 2012}\\
@@ -78,7 +79,7 @@ Ergonomy of Human Machine interfaces \\
 - Averseng M.: Fast discrete convolution in R2
 with radial kernels using non-uniform fast Fourier transform with nonequispaced frequencies. {\em Numer. Algor.} (2019)
 
-- Alouges. F., Averseng, M.: New preconditioners for the Laplace and Helmholtz integral equations on open curves. Submitted. Arxiv preprints 1905.13604 (2019)
+- Alouges. F., Averseng, M.: New preconditioners for the Laplace and Helmholtz integral equations on open curves. Accepted for publication in {\em Numerische Mathematik}. Arxiv preprint 1905.13604 (2019)
 
 -Averseng, M.: Pseudo-differential analysis of the weighted layer potentials for the Laplace and Helmholtz integral equations on open curves. Submitted. Arxiv preprint 1905.13602 (2019).
 \end{rSection}
