--- a/4_careerGoalApplicant/A04_CareerGoals_Averseng.tex
+++ b/4_careerGoalApplicant/A04_CareerGoals_Averseng.tex
@@ -9,13 +9,12 @@
 \maketitle
 
 Here is a brief outline of my career goals.
-Making a post-doc at ETH with Pr. Hiptmair and his team is a great opportunity for me to work with one of the leading teams in my field. Especially, recent breakthroughs by Hiptmair, Claeys and Urzua-Torres have opened great perspectives and I will now be part of this innovative dynamic. I will consolidate my research skills, extend my reputation and network, together with getting experience in teaching. 
+Making a post-doc at ETH with Pr. Hiptmair and his team is a great opportunity for me to work with one of the leading teams in my field. Especially, recent breakthroughs by Hiptmair, Claeys and Urzua-Torres have opened great perspectives on operator preconditioning for screen scattering problems. I will now be part of this innovative dynamic. I will consolidate my research skills, extend my reputation and network, together with getting experience in teaching. 
 
-In the mean time, I will also attend the conferences organized each year about Boudary Element Methods and present the new developments of my work. I am greatly interested but not yet very familiar with the work of the English school in integral equations. I will attend an important conference in the university of Bath in 2021 on the topic of semi-classical analysis. I believe that this mathematical tool could play an essential role in the field of integral equation in the coming future. 
+In the mean time, I will also attend the conferences organized each year about Boudary Element Methods and present the new developments of my work. I am greatly interested but not yet very familiar with the work of UK researchers such as Chandler-Wilde and Spence. I will attend an important conference in the university of Bath in 2021 on the topic of semi-classical analysis. I believe that this mathematical tool could play an essential role in the field of integral equation in the coming future. 
 
-
-Before leaving ETH, my objective is to publish at least 6 papers in peer-reviewed journals. Such a track record will allow me to apply to the top french research institutions such as CNRS and INRIA. After obtaining a full research position in France, I will follow the usual steps to become Professor. 
-As I progress in my career, I plan to put gradually more emphasis on the real-world application of my work. I am especially attracted to the medical applications of the theory of integral equations. In this aim, I will reinforce my contacts with Pr. Andriulli who is one of the international experts on cerebral imagery using integral equations. Furthermore, Pr. Ammari, working in the same team as Pr. Hiptmair, is a renowned expert on medical imagery whom I will have the opportunity to meet during my stay at ETH. 
+Before leaving ETH, my objective is to publish at least 6 papers in peer-reviewed journals. Such a track record will allow me to apply to the top french research institutions such as CNRS and INRIA. After obtaining a full research position in France, I will follow the usual steps to obtain a full Professor position. 
+As I progress in my career, I plan to put gradually more emphasis on the real-world application of my work. I am especially attracted to the medical applications of the theory of integral equations. To this aim, I will reinforce my contacts with Pr. Andriulli who is one of the international experts on cerebral imagery using integral equations. Furthermore, Pr. Ammari, working in the same team as Pr. Hiptmair, is a renowned expert on medical imagery whom I will have the opportunity to meet during my stay at ETH. 
 
 
 
