Updated invitation letter

--- a/5_InvitationLetter/A05_InvLetter_Averseng.tex
+++ b/5_InvitationLetter/A05_InvLetter_Averseng.tex
@@ -76,14 +76,14 @@
 
 \opening{Sehr geehrter Herr Kollege Günther,}
 
-with this letter I would like to justify my \textbf{strong support} for and interest in
-the ETH Zurich Postdoctoral Fellowship Application. I had not known Dr. Averseng until
-last year Prof.~Francois Alouges from \'Ecole Polytechnique, Paris, asked me whether I
-would be wiling to serve as a reviewer for his doctoral thesis on "Méthodes efficaces pour
-la diffraction acoustique en 2 et 3 dimensions: Préconditionnement sur des domaines
-singuliers et convolution rapide". After browsing the related research reports, I agreed,
-because I realized the fundamental nature and substantial potential of that thesis'
-results, and their importance for my own work.
+with this letter I would like to express and justify my \textbf{strong support} for and
+interest in the ETH Zurich Postdoctoral Fellowship Application of Dr.~Martin Averseng. I
+had not known Dr. Averseng until last year Prof.~Francois Alouges from \'Ecole
+Polytechnique, Paris, asked me whether I would be wiling to serve as a reviewer for his
+doctoral thesis on "Méthodes efficaces pour la diffraction acoustique en 2 et 3
+dimensions: Préconditionnement sur des domaines singuliers et convolution rapide". After
+browsing the related research reports, I agreed, because I realized the fundamental nature
+and substantial potential of that thesis' results, and their importance for my own work.
 
 Dr.~Averseng's PhD research has pushed the frontier of numerical and mathematical analysis
 of boundary integral equations (BIEs) for scattering at open curves and surfaces in
@@ -117,7 +117,7 @@ deeper understanding of BIEs on complicated open surfaces, so-called \emph{compl
 novel boundary element discretizations in $[${\sc X.~Claeys, L.~Giacomel, R.~Hiptmair, and
   C.~Urzua-Torres}, {\em Quotient-space boundary element methods for scattering at complex
   screens}, Tech. Rep. 2020-11, Seminar for Applied Mathematics, ETH Z{\"u}rich, under
-review$]$. In recent, still unpublished work Dr.~Averseng could exploit this idea to
+review$]$. In recent, still unpublished, work Dr.~Averseng could exploit this idea to
 construct novel BIEs for screen problems. His ideas also seem to be highly relevant for
 building frequency-robust preconditioners for complex screens. All this is closely
 connected to my ongoing SNF-funded project dedicated to ``Novel Boundary Element Methods
@@ -127,17 +127,18 @@ his research interests.
 
 Hardly surprising, I have already offered Dr.~Averseng a full postdoctoral position in my
 group and he will start this week on September 1, 2020. I should add that Dr.~Averseng
-prevailed in a competitive postdoc application procedure implemented on the level of the
-institute, the Seminar for Applied Mathematics. His research achievements and presentation
-skills made him the first choice.
+asserted himself as top candidate in a competitive postdoc application procedure
+implemented on the level of the institute, the Seminar for Applied Mathematics. His
+research achievements and presentation skills made him the first choice. 
 
-The ETH fellowship would be another recognition of his prowess as a researcher in applied
+Though Dr.~Averseng will join ETH Zurich as a member of my group in any case,
+the ETH fellowship would be another recognition of his prowess as a researcher in applied
 mathematics. It would enhance his profile in the community and give him greater
 independence in his contributions to teaching. His outstanding communication skills would also
 make him a great messenger for ETH as a leading research institution.
 
 Summing up, Dr. Averseng is a \textbf{worthy and outstanding candidate} for an ETH
-Postdoctoral Fellowship and, in my opinion the case for selecting him is very strong.
+Postdoctoral Fellowship and, in my opinion the case for selecting him is very strong. 
 	
    \closing{Yours sincerely,}
 
